test/official_tests/operator/negate_nonnum.lox
-"s"; // error: {"line":1,"message":"Operator '-': incompatible type 'string'","type":"RuntimeError"}
